--- a/Week3/BusinessCard/app/src/main/res/layout/activity_main.xml
+++ b/Week3/BusinessCard/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
         android:layout_marginTop="23dp"
+        android:background="@color/colorPrimaryDark"
         android:text="@string/joinUs"
+        android:textColor="@android:color/background_light"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
