added item share in menu

--- a/Week3/BusinessCard/app/src/main/res/menu/menu.xml
+++ b/Week3/BusinessCard/app/src/main/res/menu/menu.xml
@@ -8,4 +8,10 @@
         android:title="@string/call"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/actionShare"
+        android:icon="@android:drawable/ic_menu_share"
+        android:title="@string/share_image"
+        app:showAsAction="ifRoom" />
+
 </menu>
