--- a/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_list_view_holder.xml
+++ b/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_list_view_holder.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation = "vertical"
-    android:layout_width="200dp"
+    android:layout_width="150dp"
     android:padding="8dp"
     android:layout_height="wrap_content">
 
@@ -11,11 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:contentDescription="@string/app_name"
-        android:scaleType="fitXY"
-        android:src="@drawable/main_Avengers" />
+        android:scaleType="fitXY" />
 
     <TextView
-        android:id="@+id/textMovieTitle"
+        android:id="@+id/movieTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
