--- a/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_list_view_holder.xml
+++ b/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_list_view_holder.xml
@@ -2,24 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation = "vertical"
-    android:layout_width="150dp"
-    android:padding="8dp"
+    android:layout_marginLeft="4dp"
+    android:layout_width="120dp"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageMovie"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:contentDescription="@string/app_name"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/movieTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        android:layout_gravity="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="15sp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textAlignment="center"
         tools:text="Avengers" />
 
 </LinearLayout>
