--- a/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
+++ b/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
@@ -11,15 +11,14 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_detail"
         android:layout_width="match_parent"
         android:layout_height="281dp"
         android:contentDescription="@string/movie_detail"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/avengers_detail" />
+        android:scaleType="centerCrop" />
 
     <TextView
-        android:id="@+id/lbl_movietitle"
+        android:id="@+id/lbl_movie_title"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:fontFamily="sans-serif"
@@ -31,11 +30,24 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/summary_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:text="@string/summary"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
+    <TextView
         android:id="@+id/lbl_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/summary"
         android:paddingTop="12dp"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <TextView
@@ -43,12 +55,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center|start"
-        android:hint="@string/director" />
+        android:hint="@string/director"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/lbl_stars"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:hint="@string/star" />
+        android:hint="@string/star"
+        android:textColor="@android:color/black" />
 </LinearLayout>
