--- a/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
+++ b/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
@@ -1,68 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorPrimaryDark"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#EFD0DF"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:textAlignment="center">
-
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/image_detail"
         android:layout_width="match_parent"
-        android:layout_height="281dp"
+        android:layout_height="320dp"
         android:contentDescription="@string/movie_detail"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/avengers_detail" />
 
     <TextView
         android:id="@+id/lbl_movie_title"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:fontFamily="sans-serif"
-        android:gravity="center"
+        android:layout_height="wrap_content"
         android:hint="@string/title"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textAllCaps="true"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_detail" />
 
     <TextView
         android:id="@+id/summary_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:text="@string/summary"
+        android:hint="@string/summary"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
         android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_movie_title" />
 
     <TextView
         android:id="@+id/lbl_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/summary"
-        android:paddingTop="12dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_marginTop="8sp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/summary_title" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.241"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/director_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/director_lbl"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_summary" />
+
+    <TextView
+        android:id="@+id/stars_lbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12sp"
+        android:text="@string/star"
+        android:textAllCaps="true"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/director_txt" />
 
     <TextView
         android:id="@+id/lbl_director"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center|start"
-        android:hint="@string/director"
-        android:textColor="@android:color/black" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:hint="@string/textView"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/divider2"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_summary"
+        app:layout_goneMarginStart="8dp" />
 
     <TextView
         android:id="@+id/lbl_stars"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="start"
-        android:hint="@string/star"
-        android:textColor="@android:color/black" />
-</LinearLayout>
+        android:text="@string/textView"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="12sp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@+id/divider2"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_director" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
