--- a/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_list_view_holder.xml
+++ b/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_list_view_holder.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation = "vertical"
-    android:layout_marginLeft="4dp"
+    android:layout_marginStart="6dp"
     android:layout_width="120dp"
     android:layout_height="wrap_content">
 
@@ -17,7 +17,7 @@
         android:id="@+id/movieTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@android:color/white"
         android:textSize="15sp"
         android:fontFamily="sans-serif-condensed-medium"
         android:textAlignment="center"
