--- a/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
+++ b/Week4/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimaryDark"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark">
 
     <ImageView
         android:id="@+id/image_detail"
@@ -24,9 +23,9 @@
         android:hint="@string/title"
         android:textAlignment="center"
         android:textAllCaps="true"
+        android:textColor="@android:color/white"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_detail" />
@@ -35,12 +34,12 @@
         android:id="@+id/summary_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/summary"
+        android:layout_marginTop="30dp"
+        android:text="@string/summary"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:textAlignment="center"
-        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lbl_movie_title" />
@@ -49,37 +48,25 @@
         android:id="@+id/lbl_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/valueRegular"
         android:hint="@string/summary"
-        android:layout_marginTop="8sp"
         android:textAlignment="center"
-        android:textSize="18sp"
         android:textColor="@android:color/white"
+        android:textSize="@dimen/valueFont"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/summary_title" />
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.241"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/director_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:text="@string/director_lbl"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        android:textSize="18sp"
         android:textColor="@android:color/white"
-        android:layout_marginTop="18dp"
+        android:textSize="@dimen/valueFont"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lbl_summary" />
 
@@ -89,9 +76,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12sp"
         android:text="@string/star"
-        android:textAllCaps="true"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textSize="@dimen/valueFont"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/director_txt" />
@@ -100,25 +86,25 @@
         android:id="@+id/lbl_director"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="25dp"
         android:hint="@string/textView"
         android:textColor="@android:color/white"
+
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/divider2"
+        app:layout_constraintStart_toEndOf="@+id/director_txt"
         app:layout_constraintTop_toBottomOf="@+id/lbl_summary"
-        app:layout_goneMarginStart="8dp" />
+        app:layout_goneMarginStart="@dimen/valueRegular" />
 
     <TextView
         android:id="@+id/lbl_stars"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="@string/textView"
-        android:textSize="18sp"
         android:textColor="@android:color/white"
-        android:layout_marginTop="12sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/divider2"
+        android:textSize="@dimen/valueFont"
+        app:layout_constraintStart_toStartOf="@+id/lbl_director"
         app:layout_constraintTop_toBottomOf="@+id/lbl_director" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
