--- a/Week5/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
@@ -49,8 +50,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/valueRegular"
+        android:layout_marginStart="@dimen/valueRegular"
         android:hint="@string/summary"
-        android:textAlignment="center"
+        android:layout_gravity="center"
         android:textColor="@android:color/white"
         android:textSize="@dimen/valueFont"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
+        android:layout_marginStart="@dimen/valueRegular"
         android:text="@string/director_lbl"
         android:textColor="@android:color/white"
         android:textSize="@dimen/valueFont"
@@ -77,6 +80,7 @@
         android:layout_marginTop="12sp"
         android:text="@string/star"
         android:textColor="@android:color/white"
+        android:layout_marginStart="@dimen/valueRegular"
         android:textSize="@dimen/valueFont"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +101,7 @@
 
     <TextView
         android:id="@+id/lbl_stars"
-        android:layout_width="wrap_content"
+        android:layout_width="286dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/textView"
