--- a/Week5/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/res/layout/movie_detail.xml
@@ -24,7 +24,7 @@
         android:hint="@string/title"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="@android:color/white"
+        android:textColor="#FFBFB44E"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginTop="30dp"
         android:text="@string/summary"
         android:textAlignment="center"
-        android:textColor="@android:color/white"
+        android:textColor="#FFBFB44E"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_marginStart="@dimen/valueRegular"
         android:hint="@string/summary"
         android:layout_gravity="center"
-        android:textColor="@android:color/white"
+        android:textColor="#FFBFB44E"
         android:textSize="@dimen/valueFont"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginStart="@dimen/valueRegular"
         android:text="@string/director_lbl"
-        android:textColor="@android:color/white"
+        android:textColor="#FFBFB44E"
         android:textSize="@dimen/valueFont"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12sp"
         android:text="@string/star"
-        android:textColor="@android:color/white"
+        android:textColor="#FFBFB44E"
         android:layout_marginStart="@dimen/valueRegular"
         android:textSize="@dimen/valueFont"
         android:textStyle="bold"
@@ -93,7 +93,7 @@
         android:layout_marginStart="39dp"
         android:layout_marginTop="25dp"
         android:hint="@string/textView"
-        android:textColor="@android:color/white"
+        android:textColor="#FFBFB44E"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/director_txt"
         app:layout_constraintTop_toBottomOf="@+id/lbl_summary"
@@ -105,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/textView"
-        android:textColor="@android:color/white"
+        android:textColor="#FFBFB44E"
         android:textSize="@dimen/valueFont"
         app:layout_constraintStart_toStartOf="@+id/lbl_director"
         app:layout_constraintTop_toBottomOf="@+id/lbl_director" />
