--- a/Week5/BlockbusterRecycler/app/src/main/res/layout/activity_login.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/back4"
     android:fadingEdge="horizontal"
     android:focusable="auto"
-    tools:context=".loginActivity">
+    tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/logo_login"
