code improved for validations, and shared preferences

--- a/Week5/BlockbusterRecycler/app/src/main/res/layout/activity_login.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/res/layout/activity_login.xml
@@ -28,10 +28,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="1dp"
-        android:background="#d9b950"
-        android:gravity="center|start"
+        android:background="@drawable/button"
+        android:gravity="center"
         android:hint="@string/username"
-        android:padding="4dp"
+        android:padding="@dimen/valueRegular"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="italic"
@@ -46,9 +46,9 @@
         android:layout_marginStart="160dp"
         android:layout_marginTop="61dp"
         android:layout_marginBottom="80dp"
-        android:background="#b99a31"
+        android:background="@drawable/button"
+        android:gravity="center"
         android:text="@string/login"
-        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,10 +62,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="16dp"
-        android:background="#d9b950"
-        android:gravity="center|start"
+        android:background="@drawable/button"
+        android:gravity="center"
         android:hint="@string/password"
-        android:padding="4dp"
+        android:padding="@dimen/valueRegular"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="italic"
