--- a/Week5/BlockbusterRecycler/app/src/main/res/layout/activity_login.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/res/layout/activity_login.xml
@@ -31,6 +31,7 @@
         android:background="@drawable/button"
         android:gravity="center"
         android:hint="@string/username"
+        android:imeOptions="actionDone"
         android:padding="@dimen/valueRegular"
         android:textColor="@android:color/black"
         android:textSize="18sp"
@@ -64,6 +65,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
         android:gravity="center"
+        android:imeOptions="actionDone"
         android:hint="@string/password"
         android:padding="@dimen/valueRegular"
         android:textColor="@android:color/black"
