--- a/Week7/ThePokemons/app/src/main/res/layout/fragment_pokemon_list.xml
+++ b/Week7/ThePokemons/app/src/main/res/layout/fragment_pokemon_list.xml
@@ -5,10 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.PokemonFragmentList">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+  <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/pokemon_recyclerView"
+    android:layout_gravity="center_horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+
+
+  </LinearLayout>
 
 </FrameLayout>
