refactor code with coroutines

--- a/Week7/ThePokemons/app/src/main/res/layout/activity_pokemon_list.xml
+++ b/Week7/ThePokemons/app/src/main/res/layout/activity_pokemon_list.xml
@@ -16,12 +16,11 @@
         android:layout_height="wrap_content"
         app:titleTextColor="@android:color/white"/>
 
-    <fragment
-        android:id="@+id/list_fragment_pokemon"
-        android:name="com.e.thepokemons.ui.fragments.PokemonFragmentList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pokemon_recyclerview"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
