implemented room and primary colors

--- a/Week7/ThePokemons/app/src/main/res/layout/pokemon_list_item.xml
+++ b/Week7/ThePokemons/app/src/main/res/layout/pokemon_list_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/card_view"
         app:cardCornerRadius="@dimen/fourdp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -38,4 +38,5 @@
 
     </LinearLayout>
 
+  </androidx.cardview.widget.CardView>
 </RelativeLayout>
