--- a/Week11/BlockbusterRecycler/app/src/main/res/layout/activity_main.xml
+++ b/Week11/BlockbusterRecycler/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,8 @@
         android:id="@+id/movieRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
