allowing transition between activities from Styles.xml

--- a/Week11/BlockbusterRecycler/app/src/main/res/values/styles.xml
+++ b/Week11/BlockbusterRecycler/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <!-- Allow activity's transitions -->
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowEnterTransition">@android:transition/fade</item>
+        <item name="android:windowExitTransition">@android:transition/fade</item>
+
+
     </style>
 
 </resources>
